# libsignal-go

./: .editorconfig  .gitattributes  .gitignore  .golangci.yml  .goreleaser.yaml  README.md  SECURITY.md  doc.go  go.mod  go.sum
.autodev/state/: phase-progress.jsonl
.github/actions/restore-cargo-cache/: calculate_cache_keys.py
.github/workflows/: compat-drift.yml  compat.yml  go.yml  release.yml  stale.yml
address/: address.go  address_test.go  serviceid.go  serviceid_test.go
compat/: README.md  interop_test.go  sealed_interop_test.go  sealedsender_vectors_test.go  session_interop_test.go  vectors_test.go
compat/rust-harness/: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
compat/rust-harness-drift/: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
compat/rust-harness-drift/src/: main.rs
compat/rust-harness/src/: main.rs
compat/vectors/: curve.json  fingerprint.json  groups.json  hkdf.json  kem-decaps.json  messages.json  sealedsender.json  sessions.json
curve/: curve.go  curve_test.go  keypair.go  xeddsa.go  xeddsa_test.go
decisions/: 0001-spqr-staged-compat.md  0002-incremental-mlkem768-pure-go.md  0003-standalone-mlkem768-triple-oracle.md  0004-spqr-session-interop-in-t28.md  0005-drift-leg-pin-fulldomain-main-minimal.md
docs/: design-guidance.md
docs/plans/: 2026-06-12-pure-go-libsignal-design-review.md  2026-06-12-pure-go-libsignal-design.md  2026-06-12-pure-go-libsignal-plan-review.md  2026-06-12-pure-go-libsignal.md  2026-06-12-pure-go-libsignal.md.scope-lock
docs/retros/: 2026-06-14-pure-go-libsignal-v0.1.0-retro.md
fingerprint/: fingerprint.go  fingerprint_test.go  fuzz_test.go
groups/: builder.go  builder_test.go  cipher.go  cipher_test.go  derivation_kat_test.go  example_test.go  fuzz_test.go  state.go  state_test.go
internal/crypto/: aescbc.go  aescbc_test.go  aesctr.go  aesctr_test.go  aesgcm.go  aesgcm_test.go  errors.go  fuzz_test.go  kdf.go  kdf_test.go
internal/mlkem768incr/: acvp_test.go  doc.go  field.go  incremental.go  incremental_oracle_test.go  mlkem.go  redact_test.go  spike_test.go
kem/: kat_test.go  kem.go  kem_test.go  kyber1024.go
proto/: README.md  fingerprint.pb.go  fingerprint.proto  generate.go  pq_ratchet.pb.go  pq_ratchet.proto  proto_test.go  sealed_sender.pb.go  sealed_sender.proto  service.pb.go  service.proto  storage.pb.go  storage.proto  wire.pb.go  wire.proto
protocol/: decryption_error_message.go  decryption_error_message_test.go  fuzz_test.go  goldens_test.go  plaintext_content.go  plaintext_content_test.go  prekey_signal_message.go  prekey_signal_message_test.go  sender_key_distribution_message.go  sender_key_distribution_message_test.go  sender_key_message.go  sender_key_message_test.go  signal_message.go  signal_message_test.go  version.go
ratchet/: kdf.go  keys.go  keys_test.go
sealedsender/: certs.go  certs_test.go  decrypt.go  example_test.go  internal.go  usmc.go  usmc_test.go  v1.go  v1_test.go  v2.go  v2_test.go
session/: builder.go  builder_test.go  bundle.go  cipher.go  cipher_test.go  example_test.go  pqratchet_test.go  record.go  record_test.go  state.go
spqr/: authenticator.go  authenticator_test.go  chain.go  chain_test.go  fuzz_test.go  message.go  oracle_test.go  spqr.go  spqr_test.go  state.go  state_test.go  v1.go  v1_codec.go  v1_codec_test.go
stores/: stores.go
stores/inmem/: inmem.go  inmem_test.go
(+14 files in other folders)
